--- a/style.css
+++ b/style.css
@@ -32,20 +32,31 @@ body {
   
   
 .text {
-    display: flex;
+/*     display: flex;
     font-size: 2.5rem;
-    /* justify-content: center; */
+    /* justify-content: center; 
     align-items: center;
     color: aliceblue;
     text-align: center;
     margin: 15px;
     padding: 2px;
     transform: rotate(45deg);
-    opacity: 0; /* Initially hidden */
-    transition: opacity 0.5s ease; /* Smooth transition for opacity */
+    opacity: 0; /* Initially hidden 
+    transition: opacity 0.5s ease; */
+   font-size: 1rem;
+    top: 35%;
+    left: 50%;
+    color: aliceblue;
+    text-align: center;
+  
+    margin: 15px;
+    padding: 2px;
+    transform: rotate(180deg);
+    opacity: 1; /* Initially hidden */
+    transition: opacity 0.5s ease;
   }
 .box {
-    display: flex;
+/*     display: flex;
     width: 250px;
     height: 250px;
     border-radius: 50% 50% 50% 0;
@@ -58,23 +69,73 @@ body {
     margin: -20px 0 0 -20px;
     animation-name: bounce;
     animation-fill-mode: both;
-    animation-duration: 3s;
+    animation-duration: 3s; */
     /* animation-iteration-count: infinite; */
 
-  
+  display: flex;
+    width: 100px;
+    height: 100px;
+    border-radius: 50% 50% 50% 0;
+    background: rgb(206, 51, 51);
+    position: absolute;
+    transform: rotate(155deg);
+    transform-origin: bottom; 
+    left: 50%;
+    top: 30%;
+    margin: -20px 0 0 -20px;
+    animation-name: bounce;
+    animation-fill-mode: both;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
     
   }
+
+  .heart { 
+  
+    position: absolute; 
+    top: 35%;
+    left: 50%;
+    width: 850px;
+    height: 550px;
+    margin: -20px 0 0 -20px;
+    animation-name: bounce;
+    animation-fill-mode: both;
+    animation-duration: 3s;
+    /* animation-iteration-count: infinite; */
+    /* opacity: 0; */
+  }
+
+.heart:before, .heart:after { 
+    position: absolute; 
+    content: ""; 
+    
+    left: 150px; 
+    top: 0; 
+    width: 150px; 
+    height: 250px; 
+    background: red; 
+    border-radius: 100px 100px 0 0; 
+    transform: rotate(-45deg); 
+    transform-origin: 0 100%; 
+    /* opacity: 0; */
+}
+
+.heart:after { 
+    left: 0; 
+    transform: rotate(45deg); 
+    transform-origin :100% 100%; 
+}
   
   @keyframes bounce {
     0% {
       opacity: 0;
-      transform: translateY(-2000px) rotate(-45deg);
+      transform: translateY(-2000px) rotate(deg);
     }
     60% {
       opacity: 1;
-      transform:scaleY(0.6) translateY(30px) rotate(-45deg);
+      transform:scaleY(0.6) translateY(30px) rotate(deg);
     }
     100% {
-      transform:  scaleY(1) translateY(0) rotate(-45deg);
+      transform:  scaleY(1) translateY(0) rotate(deg);
     }
   } 
